--- a/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
+++ b/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
@@ -41,9 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Repairs\RepairResult.cs" />
+    <Compile Include="Repairs\IRepair.cs" />
+    <Compile Include="Repairs\DhcpRepair.cs" />
     <Compile Include="Tests\ITest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\SduNetTest.cs" />
+    <Compile Include="Tests\InternetTest.cs" />
+    <Compile Include="Tests\SystemGatewayTest.cs" />
     <Compile Include="Tests\SystemProxyTest.cs" />
     <Compile Include="Tests\TestResult.cs" />
     <Compile Include="Utils\RegUtil.cs" />
