feat(NetworkAdapterTest): 新增网卡测试 feat(InternetTest): 增加路由检测 feat(ui): 优化滚动条UI

--- a/SduNetCheckTool.GUI/SduNetCheckTool.GUI.csproj
+++ b/SduNetCheckTool.GUI/SduNetCheckTool.GUI.csproj
@@ -84,6 +84,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Common\UserPerformedTask.cs" />
+    <Compile Include="Reference.cs" />
     <Compile Include="ViewModels\Commands.cs" />
     <Compile Include="ViewModels\ToolBoxViewModel.cs" />
     <Compile Include="Views\AboutView.xaml.cs">
