--- a/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
+++ b/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,10 +49,12 @@
     <Compile Include="Repairs\DhcpRepair.cs" />
     <Compile Include="Tests\ITest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\NetworkAdapterTest.cs" />
     <Compile Include="Tests\SduNetTest.cs" />
     <Compile Include="Tests\SystemGatewayTest.cs" />
     <Compile Include="Tests\SystemProxyTest.cs" />
     <Compile Include="Tests\TestResult.cs" />
+    <Compile Include="Utils\PingTraceRoute.cs" />
     <Compile Include="Utils\RegUtil.cs" />
   </ItemGroup>
   <ItemGroup />
