--- a/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
+++ b/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -51,9 +53,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\NetworkAdapterTest.cs" />
     <Compile Include="Tests\SduNetTest.cs" />
+    <Compile Include="Tests\SduWebsiteTest.cs" />
     <Compile Include="Tests\SystemGatewayTest.cs" />
     <Compile Include="Tests\SystemProxyTest.cs" />
     <Compile Include="Tests\TestResult.cs" />
+    <Compile Include="Utils\HttpUtil.cs" />
     <Compile Include="Utils\PingTraceRoute.cs" />
     <Compile Include="Utils\RegUtil.cs" />
   </ItemGroup>
