feat(CommonWebsiteTest):增加B站、知乎、知网的检测。

--- a/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
+++ b/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Repairs\RepairResult.cs" />
     <Compile Include="Repairs\IRepair.cs" />
     <Compile Include="Repairs\DhcpRepair.cs" />
+    <Compile Include="Tests\CommonWebsiteTest.cs" />
     <Compile Include="Tests\ITest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\NetworkAdapterTest.cs" />
