--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       coreProjectPath: SduNetCheckTool.Core\SduNetCheckTool.Core.csproj
       guiProjectPath: SduNetCheckTool.GUI\SduNetCheckTool.GUI.csproj
       Configuration: Release
-      appPackagesDirectory: bin\Release
+      appPackagesDirectory: bin\x64\Release
 
 
     steps:
@@ -49,10 +49,10 @@ jobs:
         uses: microsoft/setup-msbuild@v1.1
 
       - name: Restore the Wpf application
-        run: msbuild ${{ env.solutionPath }} /t:Restore /p:Configuration=${{ env.Configuration }} /p:RuntimeIdentifier=win
+        run: msbuild ${{ env.solutionPath }} /t:Restore /p:Configuration=Release /p:Platform=x64 /p:RuntimeIdentifier=win-x64
 
       - name: Build wapproj
-        run: msbuild ${{ env.solutionPath }} /p:Configuration=${{env.Configuration}} /p:UapAppxPackageBuildMode=StoreUpload /p:AppxBundle=Never /p:GenerateAppInstallerFile=False /p:AppxPackageSigningEnabled=False
+        run: msbuild ${{ env.solutionPath }} /p:Configuration=${{env.Configuration}} /p:Platform=x64 /p:RuntimIdentifier=win /p:UapAppxPackageBuildMode=StoreUpload /p:AppxBundle=Never /p:GenerateAppInstallerFile=False /p:AppxPackageSigningEnabled=False
 
       - name: Create archive
         run: |
