--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,14 +36,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v4
         with:
-          node-version: '16'
-
-      - name: Install .NET Core
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '6.0.x'
+          node-version: 18
 
       - name: Setup MSBuild.exe
         uses: microsoft/setup-msbuild@v1.1
