--- a/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
+++ b/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Tests\TestResult.cs" />
     <Compile Include="Utils\HttpUtil.cs" />
     <Compile Include="Utils\PingTraceRoute.cs" />
+    <Compile Include="Utils\ProxySetting.cs" />
     <Compile Include="Utils\RegUtil.cs" />
   </ItemGroup>
   <ItemGroup />
