demo :修改 DNS 服务器设置

--- a/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
+++ b/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomInputTest\DNSSwitch.cs" />
     <Compile Include="CustomInputTest\ICustomInputTest.cs" />
     <Compile Include="CustomInputTest\InternetTest.cs" />
     <Compile Include="Repairs\ProxyRepair.cs" />
