--- a/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
+++ b/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomInputTest\DNSSwitch.cs" />
     <Compile Include="CustomInputTest\ICustomInputTest.cs" />
     <Compile Include="CustomInputTest\InternetTest.cs" />
     <Compile Include="Repairs\ProxyRepair.cs" />
@@ -95,6 +96,7 @@
     <Compile Include="Tests\SystemProxyTest.cs" />
     <Compile Include="Tests\TestResult.cs" />
     <Compile Include="Utils\HttpUtil.cs" />
+    <Compile Include="Utils\NetworkInterfaceHelper.cs" />
     <Compile Include="Utils\PingTraceRoute.cs" />
     <Compile Include="Utils\ProxySetting.cs" />
     <Compile Include="Utils\RegUtil.cs" />
