--- a/SduNetCheckTool.GUI/SduNetCheckTool.GUI.csproj
+++ b/SduNetCheckTool.GUI/SduNetCheckTool.GUI.csproj
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props"
-    Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -111,13 +110,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Common\CustomUserPerformdTask.cs" />
-    <Compile Include="Common\TaskTemplateSelector.cs" />
-    <Compile Include="Common\UserPerformedTask.cs" />
     <Compile Include="Reference.cs" />
-    <Compile Include="Utils\FileUtil.cs" />
-    <Compile Include="ViewModels\Commands.cs" />
-    <Compile Include="ViewModels\ToolBoxViewModel.cs" />
     <Compile Include="Views\AboutView.xaml.cs">
       <DependentUpon>AboutView.xaml</DependentUpon>
     </Compile>
@@ -142,10 +135,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Common\DetectionTask.cs" />
     <Compile Include="Converters\TaskStatus2SymbolConverter.cs" />
     <Compile Include="Converters\TaskStatus2VisibilityConverter.cs" />
-    <Compile Include="ViewModels\TestViewModel.cs" />
     <Compile Include="Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -181,7 +172,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Common\TaskStatusEnum.cs" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -193,14 +183,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm">
-      <Version>8.2.1</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
-      <Version>7.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications">
-      <Version>7.1.3</Version>
+      <Version>8.0.0</Version>
     </PackageReference>
     <PackageReference Include="ModernWpfUI">
       <Version>0.9.6</Version>
@@ -210,6 +194,10 @@
     <ProjectReference Include="..\SduNetCheckTool.Core\SduNetCheckTool.Core.csproj">
       <Project>{3A776D32-9429-4C53-989C-F6038DBF4D46}</Project>
       <Name>SduNetCheckTool.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SduNetCheckTool.Mvvm\SduNetCheckTool.Mvvm.csproj">
+      <Project>{2a9dfd3c-9fd5-40ac-9733-8007021450fd}</Project>
+      <Name>SduNetCheckTool.Mvvm</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
