--- a/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
+++ b/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
@@ -80,9 +80,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomInputTest\DNSSwitch.cs" />
-    <Compile Include="CustomInputTest\ICustomInputTest.cs" />
-    <Compile Include="CustomInputTest\InternetTest.cs" />
+    <Compile Include="Tools\DNSSwitch.cs" />
+    <Compile Include="Tools\InternetTest.cs" />
     <Compile Include="Repairs\ProxyRepair.cs" />
     <Compile Include="Repairs\RepairResult.cs" />
     <Compile Include="Repairs\IRepair.cs" />
