改进了更改DNS功能
在DNS更改页面增加了以管理员权限重启的按钮

--- a/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
+++ b/SduNetCheckTool.Core/SduNetCheckTool.Core.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Tests\SduWebsiteTest.cs" />
     <Compile Include="Tests\SystemProxyTest.cs" />
     <Compile Include="Tests\TestResult.cs" />
+    <Compile Include="Utils\Identifier.cs" />
     <Compile Include="Utils\HttpUtil.cs" />
     <Compile Include="Utils\NetworkInterfaceHelper.cs" />
     <Compile Include="Utils\PingTraceRoute.cs" />
