--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
     env:
       # artifacts 命名 [名字]-[build-number]-[commit-hash]
       artifactName: SduNetCheckTool-build.${{github.run_number}}-${{ github.sha }}
-      appPackagesExecutable: SduNetCheckTool-build.${{github.run_number}}-${{ github.sha }}.exe
+      appPackagesExecutable: SduNetCheckTool-build.${{github.run_number}}-${{ github.sha }}.zip
 
       solutionPath: SduNetCheckTool.sln
       guiProjectDirectory: SduNetCheckTool.GUI
@@ -48,15 +48,15 @@ jobs:
       - name: Restore and build the Wpf application
         run: ./.github/utils/build.ps1 -SolutionPath ${{ env.solutionPath }} -Configuration ${{ env.Configuration }} -Platform ${{ env.Platform }} -RuntimeIdentifier ${{ env.RuntimeIdentifier }}
 
-      # - name: Rename file
-      #   run: |
-      #     mkdir build
-      #     Compress-Archive -Path ${{ env.guiProjectDirectory }}\${{ env.appPackagesDirectory }}\app.publish\SduNetCheckTool.GUI.exe -DestinationPath build\${{ env.appPackagesExecutable }}
+      - name: Rename file
+        run: |
+          mkdir build
+          Compress-Archive -Path ${{ env.guiProjectDirectory }}\${{ env.appPackagesDirectory }}\ -DestinationPath build\${{ env.appPackagesExecutable }}
       
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.artifactName }}
           path: |
-            ${{ env.guiProjectDirectory }}\${{ env.appPackagesDirectory }}
+            build\${{ env.appPackagesExecutable }}
           retention-days: 15
