--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,9 +35,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '3.1.x'
+      # - uses: actions/setup-dotnet@v4
+      #   with:
+      #     dotnet-version: '3.1.x'
 
       - name: Setup MSBuild.exe
         uses: microsoft/setup-msbuild@v2
@@ -48,15 +48,15 @@ jobs:
       - name: Restore and build the Wpf application
         run: ./.github/utils/build.ps1 -SolutionPath ${{ env.solutionPath }} -Configuration ${{ env.Configuration }} -Platform ${{ env.Platform }} -RuntimeIdentifier ${{ env.RuntimeIdentifier }}
 
-      - name: Rename file
-        run: |
-          mkdir build
-          Compress-Archive -Path ${{ env.guiProjectDirectory }}\${{ env.appPackagesDirectory }}\ -DestinationPath build\${{ env.appPackagesExecutable }}
+      # - name: Rename file
+      #   run: |
+      #     mkdir build
+      #     Compress-Archive -Path ${{ env.guiProjectDirectory }}\${{ env.appPackagesDirectory }}\ -DestinationPath build\${{ env.appPackagesExecutable }}
       
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.artifactName }}
           path: |
-            build\${{ env.appPackagesExecutable }}
+            SduNetCheckTool.GUI\bin\x64\Release\SduNetCheckTool.GUI.exe
           retention-days: 15
