--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,15 +35,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      # - uses: actions/setup-dotnet@v4
-      #   with:
-      #     dotnet-version: '3.1.x'
+      - uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '3.1.x'
 
       - name: Setup MSBuild.exe
         uses: microsoft/setup-msbuild@v2
       
-      # - name: Add Costura.Fody
-      #   run: dotnet add .\SduNetCheckTool.GUI\SduNetCheckTool.GUI.csproj package Costura.Fody
+      - name: Add Costura.Fody
+        run: dotnet add .\SduNetCheckTool.GUI\SduNetCheckTool.GUI.csproj package Costura.Fody
 
       - name: Restore and build the Wpf application
         run: ./.github/utils/build.ps1 -SolutionPath ${{ env.solutionPath }} -Configuration ${{ env.Configuration }} -Platform ${{ env.Platform }} -RuntimeIdentifier ${{ env.RuntimeIdentifier }}
