bugfix: 修改了单文件打包模式为 CosturaFody (#14)
* 修改了 CI

- 增引入了 Costura.fody 来实现单文件
- 将 build 逻辑单独放到了 ps 脚本里

* Update build.yml

* Update build.yml

* edit ci

- 修改了上传的文件,或许解决了无法描述的 bug
- 删去了 安装 dotnet ，因为没有使用到

* Update release.yml

* [skip ci]Update release.yml

* [skip ci] doc(readme): 增加引用库申明

* [skip ci] 更改了 Costura.Fody 的使用场景

---------

Co-authored-by: ForDream丶梦空 <56014859+Forgot-Dream@users.noreply.github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     build:
       uses: ./.github/workflows/build.yml
 
-    relase:
+    release:
         needs: build
         runs-on: ubuntu-latest
 
@@ -24,21 +24,17 @@ jobs:
           uses: actions/checkout@v2
 
         - name: Download Artifact
-          uses: actions/download-artifact@v2
-          with:
-            name: ${{ env.artifact_name }}
-        
+          uses: actions/download-artifact@v4
+              
         - name: Display Artifact
           run: |
             ls -l
-            mv ${{ env.artifact_name }}.zip SduNetCheckTool-${{ github.ref_name }}.zip
-            mv ${{ env.artifact_name }}.exe SduNetCheckTool-${{ github.ref_name }}.exe
+            mv ${{env.artifact_name }}/SduNetCheckTool.GUI.exe SduNetCheckTool-${{ github.ref_name }}.exe
         
         - name: Create Release
           uses: softprops/action-gh-release@v1
           with:
             files: |
-                SduNetCheckTool-${{ github.ref_name }}.zip
                 SduNetCheckTool-${{ github.ref_name }}.exe
                 LICENSE.txt
             tag_name: ${{ github.ref_name }}
